--- a/README.adoc
+++ b/README.adoc
@@ -10,8 +10,8 @@
 
 .To run 
 
-* git clone https://github.com/miteshrh/multi-tier-application.git
-* cd multi-tier-application
+* git clone https://github.com/benwong1124/3TierApp.git
+* cd 3TierApp
 * ansible-playbook main.yml -e GUID=<your guid>
 
 == Thank you
